--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@tanstack/react-query": "^5.90.8",
+    "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "swiper": "^12.0.2"
+    "react-hook-form": "^7.66.0",
+    "swiper": "^12.0.2",
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
